Fix subheader spacing

--- a/assets/scss/pages/products/studio.scss
+++ b/assets/scss/pages/products/studio.scss
@@ -3,7 +3,7 @@
 
 #page-products-studio {
   .top {
-    margin-top: -140px;
+    margin-top: -148px;
     padding-top: 180px;
     text-align: center;
     background: linear-gradient(180deg, #121417 0%, #06090D 100%);
